overflow fix

--- a/packages/vector/themes/basic.styl
+++ b/packages/vector/themes/basic.styl
@@ -20,6 +20,7 @@ html,body
   position relative
   z-index 2
   height 100%
+  overflow-x hidden
 
   h1
     font-weight 100!important
